--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -10,7 +10,7 @@
             <div class="col-lg-12">
                 <div class="contact-info text-center" style="color: white;">
                     <h3>Our Location</h3>
-                    <p>Dattam Labs, Cabin no: 14, Awfis, Prestige Skytech</p>
+                    <p>Dattam Labs, Awfis, Prestige Skytech</p>
                     <p>ISB Rd, behind Continental Hospital, Financial District</p>
                     <p>Nanakramguda, Telangana 500032</p>
                     <br>
